Storyboard Gesture Navigation Feature 1st Draft Completed

--- a/NaturiS/Main.storyboard
+++ b/NaturiS/Main.storyboard
@@ -204,7 +204,7 @@
         <!--Arrive View Controller-->
         <scene sceneID="zbJ-tI-eIK">
             <objects>
-                <viewController id="1Na-KB-dpP" customClass="ArriveViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ArriveViewController" id="1Na-KB-dpP" customClass="ArriveViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IHS-A3-imO"/>
                         <viewControllerLayoutGuide type="bottom" id="f6a-g5-wbi"/>
@@ -217,25 +217,25 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Button2" translatesAutoresizingMaskIntoConstraints="NO" id="7Jq-Uf-FVp">
-                                <rect key="frame" x="-174" y="-144" width="558" height="558"/>
+                                <rect key="frame" x="-174" y="-165" width="558" height="558"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="7Jq-Uf-FVp" secondAttribute="height" multiplier="1:1" id="g2O-cf-oKf"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Button2" translatesAutoresizingMaskIntoConstraints="NO" id="vHQ-Nd-55m">
-                                <rect key="frame" x="216" y="-144" width="558" height="558"/>
+                                <rect key="frame" x="216" y="6" width="558" height="558"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="vHQ-Nd-55m" secondAttribute="height" multiplier="1:1" id="cXF-cT-m2d"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Arriving Time:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1jV-L7-6M8">
-                                <rect key="frame" x="55" y="144" width="99.5" height="12"/>
+                                <rect key="frame" x="55" y="120" width="99.5" height="12"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Arriving Location:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OUf-Nl-3Wo">
-                                <rect key="frame" x="436.5" y="144" width="118" height="12"/>
+                                <rect key="frame" x="436.5" y="150" width="118" height="12"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -248,17 +248,17 @@
                             <constraint firstItem="Iyv-TN-HIz" firstAttribute="height" secondItem="eB2-Rq-HWc" secondAttribute="height" id="2Gf-a8-GrN"/>
                             <constraint firstItem="7Jq-Uf-FVp" firstAttribute="centerX" secondItem="Iyv-TN-HIz" secondAttribute="centerX" multiplier="0.35" id="5pN-iD-6PR"/>
                             <constraint firstItem="Iyv-TN-HIz" firstAttribute="centerY" secondItem="eB2-Rq-HWc" secondAttribute="centerY" id="JMH-xW-ylq"/>
-                            <constraint firstItem="OUf-Nl-3Wo" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.5" id="NbD-Q0-Eph"/>
+                            <constraint firstItem="OUf-Nl-3Wo" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.52" id="NbD-Q0-Eph"/>
                             <constraint firstItem="vHQ-Nd-55m" firstAttribute="width" secondItem="Iyv-TN-HIz" secondAttribute="width" multiplier="0.93" id="O95-53-9VH"/>
                             <constraint firstItem="7Jq-Uf-FVp" firstAttribute="width" secondItem="Iyv-TN-HIz" secondAttribute="width" multiplier="0.93" id="TWf-ra-m0s"/>
                             <constraint firstItem="OUf-Nl-3Wo" firstAttribute="centerX" secondItem="Iyv-TN-HIz" secondAttribute="centerX" multiplier="1.65" id="Tym-QJ-K7v"/>
-                            <constraint firstItem="7Jq-Uf-FVp" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.45" id="XwG-hp-HVc"/>
-                            <constraint firstItem="vHQ-Nd-55m" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.45" id="ctG-r6-9OK"/>
+                            <constraint firstItem="7Jq-Uf-FVp" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.38" id="XwG-hp-HVc"/>
+                            <constraint firstItem="vHQ-Nd-55m" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.95" id="ctG-r6-9OK"/>
                             <constraint firstItem="Iyv-TN-HIz" firstAttribute="width" secondItem="eB2-Rq-HWc" secondAttribute="width" id="ddo-fX-ohn"/>
                             <constraint firstItem="1jV-L7-6M8" firstAttribute="centerX" secondItem="Iyv-TN-HIz" secondAttribute="centerX" multiplier="0.35" id="gVB-Ja-d0c"/>
                             <constraint firstItem="Iyv-TN-HIz" firstAttribute="centerX" secondItem="eB2-Rq-HWc" secondAttribute="centerX" id="nlD-hG-Wy7"/>
                             <constraint firstItem="vHQ-Nd-55m" firstAttribute="centerX" secondItem="Iyv-TN-HIz" secondAttribute="centerX" multiplier="1.65" id="ulw-h8-wee"/>
-                            <constraint firstItem="1jV-L7-6M8" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.5" id="wOs-q9-Zxd"/>
+                            <constraint firstItem="1jV-L7-6M8" firstAttribute="centerY" secondItem="Iyv-TN-HIz" secondAttribute="centerY" multiplier="0.42" id="wOs-q9-Zxd"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -283,7 +283,7 @@
         <!--Collect View Controller-->
         <scene sceneID="tyM-6e-IxN">
             <objects>
-                <viewController id="SyA-Zr-kMf" customClass="CollectViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CollectViewController" id="SyA-Zr-kMf" customClass="CollectViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mZb-5G-eiS"/>
                         <viewControllerLayoutGuide type="bottom" id="JKA-oe-d2g"/>
@@ -313,8 +313,8 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Self Product Analysis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXK-qj-OWj">
-                                <rect key="frame" x="440.5" y="138" width="110" height="12"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Our Product Analysis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXK-qj-OWj">
+                                <rect key="frame" x="441.5" y="138" width="108.5" height="12"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="10"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -362,7 +362,7 @@
         <!--Demo View Controller-->
         <scene sceneID="9TJ-MA-Ngm">
             <objects>
-                <viewController id="eFE-0g-I94" customClass="DemoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DemoViewController" id="eFE-0g-I94" customClass="DemoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dzk-us-Lmk"/>
                         <viewControllerLayoutGuide type="bottom" id="PDj-f0-pcs"/>
@@ -456,7 +456,7 @@
         <!--Collect Intro View Controller-->
         <scene sceneID="hC6-fD-Ihn">
             <objects>
-                <viewController id="veN-Ml-F0J" customClass="CollectIntroViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CollectIntroViewController" id="veN-Ml-F0J" customClass="CollectIntroViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Qf5-nf-7Mp"/>
                         <viewControllerLayoutGuide type="bottom" id="Lgb-AA-wrG"/>
@@ -492,7 +492,7 @@
         <!--Demo Ready View Controller-->
         <scene sceneID="1E4-9V-Olz">
             <objects>
-                <viewController id="reu-uZ-VWS" customClass="DemoReadyViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="DemoReadyViewController" id="reu-uZ-VWS" customClass="DemoReadyViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2v2-sZ-oDL"/>
                         <viewControllerLayoutGuide type="bottom" id="2SA-gF-2S2"/>
@@ -528,7 +528,7 @@
         <!--Feedback Intro View Controller-->
         <scene sceneID="sDB-Wo-tDc">
             <objects>
-                <viewController id="Sog-Vp-5fU" customClass="FeedbackIntroViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FeedbackIntroViewController" id="Sog-Vp-5fU" customClass="FeedbackIntroViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="edG-lU-lpo"/>
                         <viewControllerLayoutGuide type="bottom" id="fvf-yU-YhT"/>
@@ -567,7 +567,7 @@ feedback?</string>
         <!--Feedback View Controller-->
         <scene sceneID="xAF-Ac-RqY">
             <objects>
-                <viewController id="vhO-aZ-Lyz" customClass="FeedbackViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FeedbackViewController" id="vhO-aZ-Lyz" customClass="FeedbackViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="i4N-zD-whM"/>
                         <viewControllerLayoutGuide type="bottom" id="hvg-ZV-MOL"/>
@@ -646,7 +646,7 @@ feedback?</string>
         <!--Leave View Controller-->
         <scene sceneID="BpD-rv-UCg">
             <objects>
-                <viewController id="5f6-Iv-l2R" customClass="LeaveViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LeaveViewController" id="5f6-Iv-l2R" customClass="LeaveViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tr1-Ar-Eq0"/>
                         <viewControllerLayoutGuide type="bottom" id="jyt-t5-t27"/>
@@ -725,7 +725,7 @@ feedback?</string>
         <!--Leave Intro View Controller-->
         <scene sceneID="XBu-yE-EGM">
             <objects>
-                <viewController id="fPb-WT-01w" customClass="LeaveIntroViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LeaveIntroViewController" id="fPb-WT-01w" customClass="LeaveIntroViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="O5p-r7-tzN"/>
                         <viewControllerLayoutGuide type="bottom" id="ghg-bc-1Xw"/>
@@ -761,7 +761,7 @@ feedback?</string>
         <!--Congratulation View Controller-->
         <scene sceneID="PjB-vV-Iza">
             <objects>
-                <viewController id="J6e-O4-doi" customClass="CongratulationViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CongratulationViewController" id="J6e-O4-doi" customClass="CongratulationViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jfP-a0-wRL"/>
                         <viewControllerLayoutGuide type="bottom" id="0Ui-xx-38r"/>
@@ -797,7 +797,7 @@ feedback?</string>
         <!--Next Demo View Controller-->
         <scene sceneID="Nej-ne-Ed8">
             <objects>
-                <viewController id="Gep-7H-l6f" customClass="NextDemoViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="NextDemoViewController" id="Gep-7H-l6f" customClass="NextDemoViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="NgV-Zc-4om"/>
                         <viewControllerLayoutGuide type="bottom" id="B4Z-hd-IBo"/>
@@ -833,6 +833,7 @@ feedback?</string>
         <!--Navigation Controller-->
         <scene sceneID="Pd6-4E-tee">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3Nq-yv-f9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Gpc-QM-dVs" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZyG-6Q-5cI">
@@ -844,7 +845,6 @@ feedback?</string>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dgp-zT-RlD"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3Nq-yv-f9Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="486" y="346"/>
         </scene>
