--- a/NaturiS/Base.lproj/LaunchScreen.storyboard
+++ b/NaturiS/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,7 +17,32 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch" translatesAutoresizingMaskIntoConstraints="NO" id="epA-lB-PEx">
+                                <rect key="frame" x="11.5" y="0.0" width="577" height="600"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="epA-lB-PEx" secondAttribute="height" multiplier="25:26" id="CbV-F6-i2T"/>
+                                    <constraint firstAttribute="width" secondItem="epA-lB-PEx" secondAttribute="height" multiplier="25:26" id="SwQ-mM-gQs"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="CbV-F6-i2T"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="epA-lB-PEx" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Gp4-LD-nTx"/>
+                            <constraint firstItem="epA-lB-PEx" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Lwl-6W-1Ds"/>
+                            <constraint firstItem="epA-lB-PEx" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="RBs-0P-1MC"/>
+                            <constraint firstItem="epA-lB-PEx" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="aLE-DO-Eyt"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="RBs-0P-1MC"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +50,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Launch" width="600" height="624"/>
+    </resources>
 </document>
